2003-02-03  John Levon  <levon@movementarian.org>

	* configure.in: 0.6cvs

2003-02-02  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.5

2003-02-02  John Levon  <levon@movementarian.org>

	* configure.in: disable x86_64

2003-02-02  John Levon  <levon@movementarian.org>

	* pp/format_output.cpp: revert previous patch, Phil's
	  x86 binutils is built with 64-bit bfd_vma

2003-02-01  John Levon  <levon@movementarian.org>

	* utils/opcontrol: rename --separate-samples to --separate=library
	  for future proofing.

	* pp/format_output.cpp: output vma at a suitable width

2003-01-31  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol(get_kernel_range): Match only .text segment.

2003-01-31  Graydon Hoare  <graydon@redhat.com>

	* libabi/abi.cpp
	* libabi/abi_test.cpp
	* libabi/op_import.cpp: Treat endianness as a property of the datum
	being imported, rather than the memory architecture.

2003-01-31  Dave Jones <davej@codemonkey.org.uk>

	* module/x86/op_model_athlon.c: Don't poke reserved bits in the counter.
	  Only rdmsr/wrmsr counters that we've enabled in the NMI handler.
	  ulong->uint conversion.

2003-01-30  Philippe Elie  <phil.el@wanadoo.fr>

	From Randolph Chung :

	* daemon/opd_cookie.h: add parisc support

2003-01-30  John Levon  <levon@movementarian.org>

	From Anton Blanchard :

	* daemon/opd_cookie.h: add ppc32/64

	* utils/op_start_25: fix start of kernel for ppc

2003-01-30  Will Cohen  <wcohen@redhat.com>

	* utils/opcontrol(get_kernel_range): Avoid using perl arithmetic.

2003-01-29  Dave Jones <davej@codemonkey.org.uk>

	* utils/opcontrol: Trying to use the options --pid-filter=pid and
	  --pgmr-filter=pgmr, opcontrol returned "command not found.
	  This was due to 2 missing 'test' statements.
	
2003-01-29  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_to_source.cpp: read vma with strtoull not strtoul fixing
	  32/64 failure to read output of objdump

2003-01-29  Dave Jones <davej@codemonkey.org.uk>
